--- a/templates/macros/macros.jinja
+++ b/templates/macros/macros.jinja
@@ -32,12 +32,12 @@
         --p2p-host=$$(hostname -i) \
         --genesis-file=/config/genesis.json \
         --node-private-key-file=/opt/besu/keys/key \
-{% if privacy and isMember %}
+{%- if privacy and isMember %}
         --privacy-enabled \
         --privacy-url=http://{{- node.name}}orion:8888 \
         --privacy-public-key-file=/config/orion/orion.pub \
         --privacy-onchain-groups-enabled={{- privacyOnchainGroupsEnabled}} \
-{% endif %}
+{%- endif %}
         --rpc-http-api=EEA,WEB3,ETH,NET,{% if privacy %}PRIV,{% endif %}PERM,{{- besuConsApi}} \
         --rpc-ws-api=EEA,WEB3,ETH,NET,{% if privacy %}PRIV,{% endif %}PERM,{{- besuConsApi}} ;
     volumes:
