--- a/templates/macros/macros.jinja
+++ b/templates/macros/macros.jinja
@@ -2,12 +2,12 @@
 {% set bootnode = nodeConfig | firstByAttr('boot', true) %}
 {% set memberPort = 20000 %}
 {% set rpcPort = 8545 %}
-{% set besuNodes = nodeConfig | byNotAttr('type', 'orion') | byNotAttr('type', 'orion-proxy') | byNotAttr('type', 'firewall') %}
+{% set besuNodes = nodeConfig | byNotAttr('type', 'privacynode') | byNotAttr('type', 'privacynode-proxy') | byNotAttr('type', 'firewall') %}
 {% for node in besuNodes %}
 {% set isValidator = 'validator' == node.roles | firstByValue('validator') %}
 {% set isMember = 'member' == node.roles | firstByValue('member') %}
 {% set isRPC = 'rpc' == node.roles | firstByValue('rpc') %}
-{%- set orionnode = nodeConfig | firstByAttr('name', node.orion) %}
+{%- set privacynode = nodeConfig | firstByAttr('name', node.privacynode) %}
 {% if isValidator or isMember or isRPC %}
 {% if isMember %}
 {% set memberNum = node.name | getNum() %}
@@ -40,10 +40,10 @@
         --privacy-multi-tenancy-enabled \
         --rpc-http-authentication-enabled \
         --rpc-http-authentication-credentials-file=/opt/besu/keys/auth.toml \
-        --privacy-url=http://{{- orionnode.name}}:8888 \
+        --privacy-url=http://{{- privacynode.name}}:8888 \
 {%- else %}
-        --privacy-public-key-file=/config/orion/orion.pub \
-        --privacy-url=http://{{- node.name}}orion:8888 \
+        --privacy-public-key-file=/config/{{privacynode.type}}/{{privacynode.type}}.pub \
+        --privacy-url=http://{{- node.name}}{{privacynode.type}}:8888 \
 {%- endif %}
 {%- endif %}
 {%- if p2pSSL %}
@@ -82,7 +82,7 @@
       - ./config/besu/{{- besuConsAlgo}}Genesis.json:/config/genesis.json
       - ./config/besu/networkFiles/{{- node.name}}/keys:/opt/besu/keys
 {% if privacy and isMember %}
-      - ./config/orion/networkFiles/orion{{- memberNum}}/nodeKey.pub:/config/orion/orion.pub
+      - ./config/{{privacynode.type}}/networkFiles/{{privacynode.type}}{{- memberNum}}/nodeKey.pub:/config/{{privacynode.type}}/{{privacynode.type}}.pub
 {% endif %}
 {% if p2pSSL %}
 {% if privacy and isMember %}
@@ -105,9 +105,9 @@
     depends_on:
 {% if isMember and privacy %}
 {%- if multiTenant %}
-      - {{ orionnode.name}}
+      - {{ privacynode.name}}
 {%- else %}
-      - {{ node.name}}orion
+      - {{ node.name}}{{privacynode.type}}
 {% endif %}
 {% endif %}
 {% if bootnode and node.name != bootnode.name %}
@@ -138,56 +138,8 @@
 {% endfor %}
 
 {% if isMember and privacy %}
-{%- if multiTenant %}
-{%- if "1" == memberNum %}
-  {{ orionnode.name}}:
-    image: consensys/quorum-orion:${QUORUM_ORION_VERSION:-latest}
-    command: ["/config/orion.conf"]
-    environment:
-      - ORION_NODEURL=http://{{- orionnode.name}}:8080
-      - ORION_CLIENTURL=http://{{- orionnode.name}}:8888
-      - LOG4J_CONFIGURATION_FILE=/config/log-config.xml
-    volumes:
-      - ./config/orion/orion.conf:/config/orion.conf
-      - ./config/orion/networkFiles:/keys/
-      - ./logs/orion:/tmp/orion
-      - ./config/orion/log-config.xml:/config/log-config.xml
-    networks:
-{% for network in node.networks %}
-      {{network}}:
-{% if not enableDNS %}
-        ipv4_address: {{ orionnode.ip}}
-{% endif %}
-{% endfor %}
-{%- endif %}
-{%- else %}
-{% set otherOrions = nodeConfig | byAttr('type', 'orion') | byNotAttr('name', orionnode.name) %}
-{% if otherOrions %}
-{% set otherNodes = nodeConfig | byArr(otherOrions, 'orion', 'name') %}
-  {{ node.name}}orion:
-    image: consensys/quorum-orion:${QUORUM_ORION_VERSION:-latest}
-    command: ["/config/orion.conf"]
-    environment:
-{%- if 0 < otherNodes | length %}    
-      - ORION_OTHERNODES={% for otherOrion in otherNodes %}http://{{- otherOrion.name}}orion:8080/{{',' if not loop.last}}{% endfor %}
-{%- endif %}
-      - ORION_NODEURL=http://{{- node.name}}orion:8080
-      - ORION_CLIENTURL=http://{{- node.name}}orion:8888
-      - LOG4J_CONFIGURATION_FILE=/config/log-config.xml
-    volumes:
-      - ./config/orion/orion.conf:/config/orion.conf
-      - ./config/orion/networkFiles/{{- orionnode.name}}:/keys/
-      - ./logs/orion:/tmp/orion
-      - ./config/orion/log-config.xml:/config/log-config.xml
-    networks:
-{% for network in node.networks %}
-      {{network}}:
-{% if not enableDNS %}
-        ipv4_address: {{ orionnode.ip}}
-{% endif %}
-{% endfor %}
-{% endif %}
-{%- endif %}
+{% call privacyNode(nodeConfig, node, privacynode, multiTenant, memberNum) %}
+{% endcall %}
 {% endif %}
 
 {% endif %}
@@ -195,7 +147,7 @@
 {% endmacro %}
 
 {%- macro proxies(nodeConfig) %}
-{% set proxies = nodeConfig | byAttr('type', 'orion-proxy') %}
+{% set proxies = nodeConfig | byAttr('type', 'privacynode-proxy') %}
 {% set statsPort = 13037 %}
 {% for node in proxies %}
   {{ node.name}}:
@@ -235,14 +187,14 @@
 {% endfor %}
 {% endmacro %}
 
-{%- macro haproxyOrion(nodeConfig) %}
-{% set nodes = nodeConfig | byAttr('type', 'orion-proxy') %}
-{% set orionPort = 8081 %}
+{%- macro haproxyPrivacyNode(nodeConfig) %}
+{% set nodes = nodeConfig | byAttr('type', 'privacynode-proxy') %}
+{% set privacyPort = 8081 %}
 {% for node in nodes %}
-{% set nodeName = node.name | replace('firewall', 'orion') %}
+{% set nodeName = node.name | replace('firewall', 'privacynode') %}
 listen {{nodeName}}
-    bind *:{{orionPort}}
-{% set orionPort = orionPort + 1 %}
+    bind *:{{privacyPort}}
+{% set privacyPort = privacyPort + 1 %}
     mode http
     server {{nodeName}} {{node.name}}:8080 verify required check port 8080
 {% endfor %}
@@ -250,13 +202,84 @@ listen {{nodeName}}
 
 {%- macro haproxyFirewall(nodeConfig, network) %}
 {% set firewalls = nodeConfig | byAttr('type', 'firewall') %}
-{% set orionPort = 8081 %}
+{% set firewallPort = 8081 %}
 {% for firewall in firewalls %}
-{% set nodeName = firewall.name | replace('firewall', 'orion') %}
+{% set nodeName = firewall.name | replace('firewall', 'privacynode') %}
 listen {{nodeName}}
-    bind *:{{orionPort}}
-{% set orionPort = orionPort + 1 %}
+    bind *:{{firewallPort}}
+{% set firewallPort = firewallPort + 1 %}
     mode http
     server {{nodeName}} {{firewall.name}}:8080 verify required check port 8080
 {% endfor %}
+{% endmacro %}
+
+
+{%- macro privacyNode(nodeConfig, node, privacynode, multiTenant, memberNum) %}
+{%- if "orion" == privacynode.type %}
+{% call orionNode(nodeConfig, node, privacynode, multiTenant, memberNum) %}
+{% endcall %} 
+{%- else %}
+{% call tesseraNode(nodeConfig, node, privacynode, multiTenant, memberNum) %}
+{% endcall %} 
+{%- endif %}
+{% endmacro %}
+
+
+{%- macro tesseraNode(node) %}
+hi tessera
+{% endmacro %}
+
+{%- macro orionNode(nodeConfig, node, privacynode, multiTenant, memberNum) %}
+
+{%- if multiTenant %}
+{%- if "1" == memberNum %}
+  {{ privacynode.name}}:
+    image: consensys/quorum-orion:${QUORUM_ORION_VERSION:-latest}
+    command: ["/config/orion.conf"]
+    environment:
+      - ORION_NODEURL=http://{{- privacynode.name}}:8080
+      - ORION_CLIENTURL=http://{{- privacynode.name}}:8888
+      - LOG4J_CONFIGURATION_FILE=/config/log-config.xml
+    volumes:
+      - ./config/orion/orion.conf:/config/orion.conf
+      - ./config/orion/networkFiles:/keys/
+      - ./logs/orion:/tmp/orion
+      - ./config/orion/log-config.xml:/config/log-config.xml
+    networks:
+{% for network in node.networks %}
+      {{network}}:
+{% if not enableDNS %}
+        ipv4_address: {{ privacynode.ip}}
+{% endif %}
+{% endfor %}
+{%- endif %}
+{%- else %}
+{% set otherPrivacyNodes = nodeConfig | byAttr('type', 'orion') | byNotAttr('name', privacynode.name) %}
+{% if otherPrivacyNodes %}
+{% set otherNodes = nodeConfig | byArr(otherPrivacyNodes, 'privacynode', 'name') %}
+  {{ node.name}}orion:
+    image: consensys/quorum-orion:${QUORUM_ORION_VERSION:-latest}
+    command: ["/config/orion.conf"]
+    environment:
+{%- if 0 < otherNodes | length %}    
+      - ORION_OTHERNODES={% for otherOrion in otherNodes %}http://{{- otherOrion.name}}orion:8080/{{',' if not loop.last}}{% endfor %}
+{%- endif %}
+      - ORION_NODEURL=http://{{- node.name}}orion:8080
+      - ORION_CLIENTURL=http://{{- node.name}}orion:8888
+      - LOG4J_CONFIGURATION_FILE=/config/log-config.xml
+    volumes:
+      - ./config/orion/orion.conf:/config/orion.conf
+      - ./config/orion/networkFiles/{{- privacynode.name}}:/keys/
+      - ./logs/orion:/tmp/orion
+      - ./config/orion/log-config.xml:/config/log-config.xml
+    networks:
+{% for network in node.networks %}
+      {{network}}:
+{% if not enableDNS %}
+        ipv4_address: {{ privacynode.ip}}
+{% endif %}
+{% endfor %}
+{% endif %}
+{%- endif %}
+
 {% endmacro %}
