--- a/templates/macros/macros.jinja
+++ b/templates/macros/macros.jinja
@@ -1,4 +1,4 @@
-{%- macro besuNodes(nodeConfig) %}
+{%- macro besuNodes(nodeConfig, privacyNodePort) %}
 {% set bootnode = nodeConfig | firstByAttr('boot', true) %}
 {% set memberPort = 20000 %}
 {% set rpcPort = 8545 %}
@@ -40,10 +40,10 @@
         --privacy-multi-tenancy-enabled \
         --rpc-http-authentication-enabled \
         --rpc-http-authentication-credentials-file=/opt/besu/keys/auth.toml \
-        --privacy-url=http://{{- privacynode.name}}:8888 \
+        --privacy-url=http://{{- privacynode.name}}:{{privacyNodePort}} \
 {%- else %}
         --privacy-public-key-file=/config/{{privacynode.type}}/{{privacynode.type}}.pub \
-        --privacy-url=http://{{- node.name}}{{privacynode.type}}:8888 \
+        --privacy-url=http://{{- node.name}}{{privacynode.type}}:{{privacyNodePort}} \
 {%- endif %}
 {%- endif %}
 {%- if p2pSSL %}
@@ -225,8 +225,105 @@ listen {{nodeName}}
 {% endmacro %}
 
 
-{%- macro tesseraNode(node) %}
-hi tessera
+{%- macro tesseraNode(nodeConfig, node, privacynode, multiTenant, memberNum) %}
+{% set privacyNodes = nodeConfig | byAttr('type', 'tessera') %}
+{% set otherNodes = nodeConfig | byArr(privacyNodes, 'privacynode', 'name') %}
+
+  {{ node.name}}tessera:
+    image: quorumengineering/tessera:${QUORUM_TESSERA_VERSION:-21.1.1}
+    expose:
+      - 9000
+      - 9080
+      - 9101
+    restart: "no"
+    healthcheck:
+      test: ["CMD", "wget", "--spider", "--proxy", "off", "http://localhost:9000/upcheck"]
+      interval: 3s
+      timeout: 3s
+      retries: 20
+      start_period: 5s
+    entrypoint:
+      - /bin/sh
+      - -c
+      - |
+        mkdir -p /var/log/tessera/;
+        mkdir -p /data/tm/;
+        cp /config/keys/tm.* /data/tm/ ;
+          cat <<EOF > /data/tm/tessera-config-09.json
+          {
+            "mode": "orion",
+            "useWhiteList": false,
+            "jdbc": {
+              "username": "sa",
+              "password": "",
+              "url": "jdbc:h2:./data/tm/db;MODE=Oracle;TRACE_LEVEL_SYSTEM_OUT=0",
+              "autoCreateTables": true
+            },
+            "serverConfigs":[
+            {
+              "app":"ThirdParty",
+              "enabled": true,
+              "serverAddress": "http://$$(hostname -i):9080",
+              "communicationType" : "REST"
+            },
+            {
+              "app":"Q2T",
+              "enabled": true,
+              "serverAddress": "http://$$(hostname -i):9101",
+              "sslConfig": {
+                "tls": "OFF"
+              },
+              "communicationType" : "REST"
+            },
+            {
+              "app":"P2P",
+              "enabled": true,
+              "serverAddress": "http://$$(hostname -i):9000",
+              "sslConfig": {
+                "tls": "OFF"
+              },
+              "communicationType" : "REST"
+            }
+            ],
+            "peer": [
+{% for pNode in otherNodes %}
+                {
+                    "url": "http://{{pNode.name}}tessera:9000"
+                }{{',' if not loop.last}}
+{% endfor %}
+            ],
+            "keys": {
+              "passwords": [],
+              "keyData": [
+                {
+                  "config": $$(cat /data/tm/tm.key),
+                  "publicKey": "$$(cat /data/tm/tm.pub)"
+                }
+              ]
+            },
+            "alwaysSendTo": []
+          }
+        EOF
+          cat /data/tm/tessera-config-09.json
+          java -Xms128M -Xmx128M -jar /tessera/tessera-app.jar -configfile /data/tm/tessera-config-09.json &> /var/log/tessera/tessera-$$HOSTNAME.log | tee -a /var/log/tessera/tessera-$$HOSTNAME.log
+    ports:
+      - 908{{memberNum}}:9080
+    environment:
+      - TESSERA_CONFIG_TYPE="-09"
+    volumes:
+      - ./config/tessera/networkFiles/{{privacynode.name}}:/config/keys
+      - {{node.name}}tessera:/data
+      - ./logs/tessera:/var/log/tessera/      
+    networks:
+{% for network in privacynode.networks %}
+      {{network}}:
+{% if not enableDNS %}
+        ipv4_address: {{ privacynode.ip}}
+{% endif %}
+{% endfor %}
+
+
+
 {% endmacro %}
 
 {%- macro orionNode(nodeConfig, node, privacynode, multiTenant, memberNum) %}
@@ -238,7 +335,7 @@ hi tessera
     command: ["/config/orion.conf"]
     environment:
       - ORION_NODEURL=http://{{- privacynode.name}}:8080
-      - ORION_CLIENTURL=http://{{- privacynode.name}}:8888
+      - ORION_CLIENTURL=http://{{- privacynode.name}}:{{privacyNodePort}}
       - LOG4J_CONFIGURATION_FILE=/config/log-config.xml
     volumes:
       - ./config/orion/orion.conf:/config/orion.conf
@@ -246,7 +343,7 @@ hi tessera
       - ./logs/orion:/tmp/orion
       - ./config/orion/log-config.xml:/config/log-config.xml
     networks:
-{% for network in node.networks %}
+{% for network in privacynode.networks %}
       {{network}}:
 {% if not enableDNS %}
         ipv4_address: {{ privacynode.ip}}
@@ -265,7 +362,7 @@ hi tessera
       - ORION_OTHERNODES={% for otherOrion in otherNodes %}http://{{- otherOrion.name}}orion:8080/{{',' if not loop.last}}{% endfor %}
 {%- endif %}
       - ORION_NODEURL=http://{{- node.name}}orion:8080
-      - ORION_CLIENTURL=http://{{- node.name}}orion:8888
+      - ORION_CLIENTURL=http://{{- node.name}}orion:{{privacyNodePort}}
       - LOG4J_CONFIGURATION_FILE=/config/log-config.xml
     volumes:
       - ./config/orion/orion.conf:/config/orion.conf
@@ -273,7 +370,7 @@ hi tessera
       - ./logs/orion:/tmp/orion
       - ./config/orion/log-config.xml:/config/log-config.xml
     networks:
-{% for network in node.networks %}
+{% for network in privacynode.networks %}
       {{network}}:
 {% if not enableDNS %}
         ipv4_address: {{ privacynode.ip}}
