--- a/templates/macros/macros.jinja
+++ b/templates/macros/macros.jinja
@@ -56,14 +56,15 @@
         --p2p-ssl-truststore-password-file=/opt/besu/p2p-ssl/nsspin.txt \
 {%- endif %}
 {%- if validatorPKI and isValidator%}
-        --pki-enabled=true \
-        --pki-keystore-type=JKS \
-        --pki-keystore-file=/opt/besu/validator-pki/keystore.jks \
-        --pki-keystore-password-file=/opt/besu/validator-pki/nsspin.txt \
-        --pki-keystore-certificate-alias=validator \
-        --pki-truststore-type=JKS \
-        --pki-truststore-file=/opt/besu/validator-pki/truststore.jks \
-        --pki-truststore-password-file=/opt/besu/validator-pki/nsspin.txt \
+        --Xpki-block-creation-enabled=true \
+        --Xpki-block-creation-keystore-type=PKCS12 \
+        --Xpki-block-creation-keystore-file=/opt/besu/validator-pki/new/keystore \
+        --Xpki-block-creation-keystore-password-file=/opt/besu/validator-pki/new/keystorepwd.txt \
+        --Xpki-block-creation-keystore-certificate-alias=validator \
+        --Xpki-block-creation-truststore-type=PKCS12 \
+        --Xpki-block-creation-truststore-file=/opt/besu/validator-pki/new/truststore \
+        --Xpki-block-creation-truststore-password-file=/opt/besu/validator-pki/new/keystorepwd.txt \
+        --Xpki-block-creation-crl-file=/opt/besu/validator-pki/new/validator.crl \
 {%- endif %}
         --rpc-http-api=EEA,WEB3,ETH,NET,{% if privacy %}PRIV,{% endif %}PERM,{{- besuConsApi}} \
         --rpc-ws-api=EEA,WEB3,ETH,NET,{% if privacy %}PRIV,{% endif %}PERM,{{- besuConsApi}} ;
